# Plan4Past

./: .bandit.yml  .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AUTHORS.md  CONTRIBUTING.md  Dockerfile  HISTORY.md  Makefile  Pipfile  README.md  mkdocs.yml  plan4past.def  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_PR.md
.github/workflows/: docs.yml  lint.yml  linting.yml  test.yml
benchmark/: README.md  run_planner.py
benchmark/experiments/: blocksworld-det.sh  blocksworld-nondet.sh  blocksworld.py  blocksworld1a.py  blocksworld1b.py  elevator.sh  experiment-1.py  experiment-1a.py  experiment-2.py  experiment-type-2.py  run-experiments.sh  triangle-tireworld.sh
benchmark/plotting/: plot-all.sh  plot.py  table.py
benchmark/tools/: __init__.py  core.py  fast_downward.py  fast_forward.py  fond4ltlfpltlf.py  ggpltl.py  ltlfond2fond.py  mynd.py  paladinus.py  plan4past.py
benchmark/utils/: __init__.py  base.py  blocksworld.py  elevator.py  generate.py  openstacks.py  plot_utils.py  tools.py  triangletireworld.py
benchmark_Luigi/: blocksworld_model.py  generator.py  utils.py
data/deterministic/blocksworld/: p-003.pddl  p-004.pddl  p-006.pddl  p-008.pddl  p-01.pddl  p-010.pddl  p-013.pddl  p-014.pddl  p-015.pddl  p-016.pddl  p-017.pddl  p-018.pddl  p-02.pddl  p-020.pddl  p-021.pddl  p-022.pddl  p-025.pddl  p-026.pddl  p-027.pddl  p-028.pddl  p-029.pddl  p-03.pddl  p-030.pddl  p-032.pddl  p-033.pddl  p-034.pddl  p-035.pddl  (+148 more)
data/deterministic/blocksworld-ipc00/: domain.pddl  p-01.pddl  p-02.pddl  p-03.pddl  p-04.pddl  p-05.pddl  p-06.pddl  p-07.pddl  p-08.pddl  p-09.pddl  p-10.pddl  p-101.pddl  p-11.pddl  p-12.pddl  p-13.pddl  p-14.pddl  p-15.pddl  p-16.pddl  p-17.pddl  p-18.pddl  p-19.pddl  p-20.pddl  p-21.pddl  p-22.pddl  p-23.pddl  p-24.pddl  p-25.pddl  p-26.pddl  p-27.pddl  p-28.pddl  p-29.pddl  p-30.pddl  p-31.pddl  p-32.pddl  p-33.pddl  p-34.pddl  p-35.pddl  p-36.pddl  p-37.pddl  p-38.pddl  (+39 more)
datasets/: README.md
docs/: references.md
docs/notebooks/: 01-fond-planning.ipynb  __init__.py  utils.py
examples/: compilation_example.py
examples/compiled_pddl/: domain.pddl  new-domain.pddl  new-problem.pddl
examples/pddl/: domain.pddl  fond-domain.pddl  fond-p-0.map  fond-p-0.pddl  goal.txt  p-0.pddl  p-10.pddl
final_results/blocksworld1a-nondet/: p03.pddl  p04.pddl  p05.pddl  p07.pddl  p09.pddl  p10.pddl  p11.pddl  p12.pddl  p13.pddl  p14.pddl  p15.pddl  p16.pddl  p17.pddl  p18.pddl  p19.pddl  p20.pddl
final_results/experiment-1a-blocksworld-det-INCOMPLETE/: domain.pddl  p04.pddl  p07.pddl  p09.pddl  p14.pddl  p18.pddl
final_results/experiment-1a-blocksworld-nondet/: p08.pddl
final_results/experiment-1a-triangletireworld-nondet/: p05.pddl  p06.pddl  p08.pddl  p10.pddl
final_results/experiment-1b-blocksworld-det/: p03.pddl  p16.pddl
final_results/experiment-1b-blocksworld-nondet-temp/: p06.pddl
final_results/experiment-1b-triangle-tireworld-nondet/: domain.pddl  p02.pddl  p03.pddl  p04.pddl  p07.pddl  p09.pddl
new-final-plots/: README.md
new-final-results/experiment-1a-blocksworld-nondet/: p10.pddl  p12.pddl  p13.pddl  p20.pddl  p23.pddl  p24.pddl  p25.pddl  p26.pddl  p31.pddl  p32.pddl  p33.pddl  p34.pddl  p35.pddl
new-final-results/experiment-1b-blocksworld-det/: p05.pddl  p17.pddl  p19.pddl
new-final-results/experiment-1b-blocksworld-nondet/: p02.pddl  p08.pddl
new-final-results/experiment-1b-elevator/: domain.pddl  p02.pddl  p03.pddl  p04.pddl  p05.pddl  p06.pddl  p07.pddl  p08.pddl  p09.pddl  p10.pddl  p11.pddl  p12.pddl  p13.pddl  p14.pddl  p15.pddl  p16.pddl  p17.pddl  p18.pddl  p19.pddl  p20.pddl
plan4past/: __init__.py  __main__.py  adl_compiler.py  compiler.py  compiler_ce.py  constants.py  exceptions.py
plan4past/helpers/: __init__.py  before_atom_helper.py  compilation_helper.py  formula_helper.py  quoted_atom_helper.py  utils.py  yesterday_atom_helper.py
plan4past/utility/: atoms_visitor.py  compilation_manager.py  pddl_temporal_formula_parser.py  pltl_manager.py  pltl_parser.py  ppltl_manager.py  pylogics_helper.py  shortcuts.py  utils.py
plan4past/utils/: __init__.py  atoms_visitor.py  before_generator_visitor.py  derived_visitor.py  dnf_visitor.py  mapping_parser.py  negate_visitor.py  nnf_visitor.py  pddl2ltl.py  ppnf_visitor.py  predicates_visitor.py  pylogics2pddl.py  rewrite_formula_visitor.py  to_pddl.py  val_predicates_visitor.py  yesterday_generator_visitor.py
planning_with_past/: __init__.py  compiler.py  plans.py
planning_with_past/helpers/: __init__.py  utils.py
planning_with_past/planners/: __init__.py  base.py  downward.py  prp.py
planning_with_past/utils/: __init__.py  atoms_visitor.py  condition_visitor.py  derived_visitor.py  mapping_parser.py  predicates_visitor.py  rewrite_formula_visitor.py  val_predicates_visitor.py  whens_visitor.py
python_project_template/: __init__.py
scripts/: build.sh  check_copyright.py  setup.sh  update-local-dependencies.sh  whitelist.py
tests/: __init__.py  conftest.py  test_compiler.py  test_main.py
tests/docker/: Dockerfile-planutils
tests/helpers/: __init__.py  constants.py  docker.py  misc.py
tests/test_adl_compiler/: __init__.py  test_base_compilation.py  test_compilation_evaluate_pnf.py  test_compilation_manager.py  test_compilation_remove_disjunctive_goal.py  test_dnf.py  test_formula_conversion.py  test_nnf.py  test_pddl_library.py
tests/test_ce_comp/: test_base_compilation.py  test_compilation_evaluate_pnf.py  test_compilation_manager.py  test_expressions.py  test_formula_conversion.py  test_formulas.py  test_pddl_library.py
tests/test_compiler/: __init__.py  base.py  test_blocksworld_det.py  test_elevators_det.py  test_openstacks_det.py  test_readme_example.py
tests/test_helpers/: __init__.py  test_compilation_manager.py  test_formula_helper.py  test_utils.py
tests/test_utils/: __init__.py  test_atoms_visitor.py  test_derived_visitor.py  test_mapping_parser.py  test_predicates_visitor.py  test_rewrite_formula_visitor.py  test_val_predicates_visitor.py
(+2364 files in other folders)
