[tool.poetry]
name = "Plan4Past"
version = "0.1.0"
description = "Classical and FOND Planning for Pure-Past Linear Temporal Logic Goals"
authors = ["Luigi Bonassi <luigi.bonassi@unibs.it>", "Marco Favorito <marco.favorito@gmail.com>", "Francesco Fuggitti <francesco.fuggitti@gmail.com>"]
license = "LGPLv3+ license"
readme = "README.md"
homepage = "https://whitemech.github.io/plan4past"
repository = "https://github.com/whitemech/plan4past.git"
documentation = "https://whitemech.github.io/plan4past"
keywords = [
    "automated planning",
    "temporally extended goals",
    "pure-past linear temporal logic",
]
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
include = []

[tool.poetry.scripts]
plan4past = 'plan4past.__main__:cli'

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/whitemech/plan4past/issues"
"Pull Requests" = "https://github.com/whitemech/plan4past/pulls"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
click = "^8.1.3"
pddl = "^0.3.1"
pylogics = "^0.2.1"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.5"
black = "^23.3.0"
click = "^8.1.3"
codecov = "^2.1.13"
darglint = "^1.8.1"
flake8 = "^6.0.0"
flake8-bugbear = "^23.6.5"
flake8-docstrings = "^1.7.0"
flake8-eradicate = "^1.5.0"
flake8-isort = "^6.0.0"
hypothesis = "^6.76.0"
hypothesis-pytest = "^0.19.0"
ipython = "^8.12.2"
isort = "^5.12.0"
jupyter = "^1.0.0"
markdown = "^3.3.4"
markdown-include = "^0.8.1"
mistune = "^2.0.5"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.15"
mknotebooks = "^0.7.1"
mypy = "^1.3.0"
packaging = "^23.0"
pre-commit = "^3.3.2"
pylint = "^2.17.4"
pymdown-extensions = "^10.0.1"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pytest-lazy-fixture = "^0.6.3"
pytest-randomly = "^3.12.0"
safety = {git = "https://git@github.com/pyupio/safety.git", rev = "8afa6de"}
toml = "^0.10.2"
tox = "^4.4.12"
twine = "^4.0.2"
types-requests = "^2.31.0.1"
types-setuptools = "^67.8.0.0"
types-toml = "^0.10.8.6"
vulture = "^2.7"
docker = ">=6.1.3,<6.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"